name:                  exposition
version:               0.1.0
synopsis:              A modern Haskell Prelude focused on consistency and pedagogy
description:           Please see README.md
homepage:              https://github.com/expede/exposition#README

license:               MIT
license-file:          LICENSE

author:                Brooklyn Zelenka
maintainer:            bez@brooklynzelenka.com

category:              Prelude
build-type:            Simple

extra-source-files:    README.md
cabal-version:         >= 1.24

library
  hs-source-dirs:      src
  exposed-modules:     Exposition

  build-depends:       base == 4.*
                     , flow-er ==1.0.*
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-orphans
  default-language:    Haskell2010

-- test-suite flower-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010
--   build-depends:       base
--                      , exposition
--                      , tasty >= 0.10 && < 1.0
--                      , tasty-hunit      >= 0.9 && < 1.0
--                      , tasty-smallcheck >= 0.8 && < 1.0
--                      , tasty-quickcheck >= 0.8 && < 1.0
--                      , smallcheck       >= 1.1 && < 2.0
--                      , checkers         >= 0.4 && < 1.0

test-suite doctests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  ghc-options:        -Wall +RTS -N -RTS -threaded
  hs-source-dirs:      test
  main-is:             doctests.hs
  build-depends:       base
                     , QuickCheck ==2.8.*
                     , doctest >= 0.9 && < 1.0
                     , flow-er ==1.0.*

source-repository head
  type:     git
  location: https://github.com/expede/exposition.git
