name:                overture
version:             0.1.0.0
synopsis:            A custom Prelude
description:         Please see README.md
homepage:            http://github.com/githubuser/simple#readme
license:             MIT
license-file:        LICENSE
author:              Brooklyn Zelenka
maintainer:          brooklyn@robotoverlord.io
copyright:           2016 Robot Overlord Software Inc.
category:            Prelude
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-orphans

test-suite simple-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , overture
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/robot-overlord/overture
